# json-table-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  app.html  build.rs  rust-toolchain
.github/workflows/: deploy_web_demo.yml  release.yml
public/: alternative.html  index.html
scripts/: build_web.sh  setup_web.sh
src/: array_table.rs  compatibility.rs  flatten.rs  fonts.rs  main.rs  object_table.rs  panels.rs  subtable_window.rs  table.rs  table_demo.rs  web.rs
src/components/: cache.rs  cell_text.rs  fps.rs  icon.rs  mod.rs  popover.rs  table.rs
src/parser/: lexer.rs  mod.rs  my_lexer.rs  parser.rs  read_file.rs  serializer.rs
web/: alternative.html  app.html  index.html  json-editor.js  json-editor_bg.wasm  skill.json
