[package]
name = "json-editor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "wgpu",
    "x11"] }
egui = { version = "0.29.1", default-features = false, features = [] }
egui_extras = { version = "0.29.1", default-features = false, features = ["svg"] }
#
#egui = { path = "C:\\dev\\egui\\crates\\egui"}
#eframe = { path = "C:\\dev\\egui\\crates\\eframe"}
#egui_extras = { path = "C:\\dev\\egui\\crates\\egui_extras"}
json-flat-parser = {git = "https://github.com/nmeylan/json-parser-flat-format.git", rev = "4604c8e99ed2d11b345e55317d47ff83b1f1fc9e", features = ["indexmap", "simdutf8", "serde"]}
rayon = {version = "1.10.0"}
rfd = {version = "0.14.1"}
indexmap = "2.2.6"
nohash-hasher = "0.2.0"
serde_json = "1.0.120"
regex-lite = "0.1.6"
parking_lot_mpsc = { version = "0.1.5" }
ehttp = "0.5.0"
log = "0.4.27"

#[patch."https://github.com/nmeylan/json-parser-flat-format.git"]
#json-flat-parser = {path = "C:\\dev\\ragnarok\\json-flat-parser"}
#json-flat-parser = {path = "/home/nmeylan/dev/ragnarok/json-flat-parser"}



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["console"], default-features = false }

[profile.release]
opt-level = 2
